volumes of meta updated

--- a/P009232.opf/meta.yml
+++ b/P009232.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W24790
   title: གསུང་འབུམ། བློ་བཟང་ལུང་རྟོགས་བསྟན་པའི་རྒྱལ་མཚན
   author: ''
-  volumes: {}
+  volumes:
+    17e1727628f74f0aaccae558e95bbc92:
+      image_group_id: I00KG09988
+      title: ''
+      volume_number: 1
+      total_pages: 782
