--- a/P009232.opf/layers/v001/Pagination.yml
+++ b/P009232.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: c70d84bddf2e4353a54f1bc564a76f5b
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   fc73b53c5eb7457bb7929384b32489a5:
