--- a/P009232.opf/meta.yml
+++ b/P009232.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P009232
 initial_creation_type: ocr
+created_at: 23/03/2020
+last_modified_at: 25/11/2021
 source_metadata:
   id: bdr:W24790
   title: གསུང་འབུམ། བློ་བཟང་ལུང་རྟོགས་བསྟན་པའི་རྒྱལ་མཚན
