--- a/P009232.opf/meta.yml
+++ b/P009232.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P009232
 initial_creation_type: ocr
 created_at: 23/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-19 19:29:11.757292
 source_metadata:
   id: bdr:W24790
   title: གསུང་འབུམ། བློ་བཟང་ལུང་རྟོགས་བསྟན་པའི་རྒྱལ་མཚན
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 782
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: false
